$Id: ChangeLog 4365 2016-11-10 19:42:24Z chrfranke $

2016-11-10  Christian Franke  <franke@computer.org>

	os_linux.cpp: Don't detect devices behind hpsa driver as regular
	SCSI devices.  Suggest to use '-d cciss,N' instead.

	Based on patch provided by Stanislav Brabec.

2016-11-05  Christian Franke  <franke@computer.org>

	update-smart-drivedb.in: Fix 'mv' error on first update with new
	script.

	configure.ac, update-smart-drivedb.in: Add '--with-gnupg' option.

	configure.ac: Add '--with-update-smart-drivedb=X.Y' option to
	backport drive database update script and man page to older
	version X.Y.

	configure.ac: Remove checks for no longer supported options
	--disable-drivedb, --enable-savestates and --enable-attributelog.

2016-11-04  Christian Franke  <franke@computer.org>

	Add authentication to update-smart-drivedb (ticket #751):
	Create missing branches RELEASE_6_5_DRIVEDB and RELEASE_6_6_DRIVEDB.
	Add signature files drivedb.h.raw.asc to each maintained branch.

	update-smart-drivedb.in: Include new public key block ID DFD22559.
	Download also drivedb.h.raw.asc.
	Do no longer download from trunk if branch does not exist.
	Create drivedb.h.raw.  Verify signature.
	Add options '--trunk', '--no-verify' and '--export-key'.
	update-smart-drivedb.8.in: Document new behaviour and options.

2016-10-23  Christian Franke  <franke@computer.org>

	smartd.8.in: Document Windows PARAMCHANGE service control command.

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Enable NVMe sections
	for NetBSD.

	configure.ac, os_netbsd.cpp: Add --with-nvme-devicescan for NetBSD.

	drivedb.h:
	- Toshiba 3.5" MG04ACA... Enterprise HDD (ticket #732)
	- Toshiba X300 (ticket #716)
	- Seagate Laptop HDD: Rename, add 3/4TB (ticket #738)
	- Seagate Constellation ES: HP OEM
	- Western Digital RE4: *ABYZ variant
	- Western Digital Re: Add attribute 16 (ticket #742)
	- Western Digital Black: Remove *BEK[TX] variants
	- Western Digital Black Mobile: 1TB, *BEKT, *LPLX variants