@@ -1,4 +1,12 @@
-$Id: ChangeLog 4365 2016-11-10 19:42:24Z chrfranke $
+$Id: ChangeLog 4366 2016-11-12 10:39:25Z chrfranke $
+
+2016-11-12  Christian Franke  <franke@computer.org>
+
+	atacmds.h, freebsd_nvme_ioctl.h: Apply patch-atacmds.h 1.1
+	and patch-freebsd_nvme_ioctl.h 1.1 (2016-11-04) from
+	pkgsrc.se/sysutils/smartmontools:
+	Build fix for FreeBSD-11 and newer.  Don't redefine now
+	existing things, ATA_SET_FEATURES and nvme_command.
 
 2016-11-10  Christian Franke  <franke@computer.org>
 
